	return self.__time,"NewStyleClass.__call__()",arg1,arg2

    new_instance = vampire.Instance(NewStyleClass)

  Either the "__init__()" method, if defined, or the "__call__()" method
  may accept form parameters or the "req" object as necessary.

  This wrapper class should be usable within "vampire::publisher",
  "vampire.Publisher()" and "vampire.Handler()".

- Made available "vampire.handlerArguments()" and "vampire.executeHandler()"
  functions. These provide means of determining set of arguments that a
  callable object accepts and a means of executing a callable object such
  that any form parameters supplied with the request are passed when
  appropriate via the arguments the callable object accepts.


Changes in Vampire 1.6
======================

- Fixed bug in module loading and caching system which could result in
  deadlock occuring under heavy thread load when imported modules did
  further subimports.

- Fixed bug where getting Apache to perform Digest authentication would
  cause a bad request error to be returned by Vampire. This was caused
  by Vampire decoding Authorization header even when no authentication
  or access hooks defined. Now delay decoding Authorization header till
  point that it has been determined that it needs to actually be done.
  One can still only use __auth__ and __access__ with Basic authentication
  but at least now you can have Digest authentication performed by
  Apache and Vampire will not get in the way.

- The special "__req__" variable which is explicitly defined in the global
  variables of a module for the life of performing the module import and
  then removed, is now the full "req" object pertaining to the request
  which has caused the module import. Previously it was a cut down version
  of the original request object. Problem is that although is was possible
  to call "__req__.server.register_cleanup()", it required the full
  original request object as argument and the cutdown version wasn't good